<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context="com.hha.heinhtetaung.curiosity.MainActivity">

    <ImageView
        android:id="@+id/iv_curiosity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/tv_curiosity"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon" />
    <TextView
        android:id="@+id/tv_curiosity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:text="@string/curiosity"
        android:textColor="@color/accent"
        android:textSize="30sp" />
    <Button
        android:alpha="6"
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#CC0D1C6C"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/fb"


        />
    <Button
        android:id="@+id/google"
        android:alpha="6"
        android:drawableLeft="@drawable/google"
        android:background="#CC303f9f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_facebook"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/google"

        android:textAllCaps="false"
        android:textColor="#ffffff"
        />
    <Button
        android:id="@+id/btn_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/google"
        android:alpha="6"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#CC03a9f4"
        android:drawableLeft="@drawable/twitter"
        android:layout_marginBottom="10dp"
        android:text="@string/twitter"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        />

        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_below="@id/btn_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >
            <Button
                android:id="@+id/btn_sign_up"
                android:drawableLeft="@drawable/eve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="6"
                android:background="#CC9e9e9e"
                android:layout_marginRight="10dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textAlignment="center"
                />
            <Button
                android:alpha="6"
                android:id="@+id/btn_sign_in"
                android:background="#CC9e9e9e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signin"
                android:drawableLeft="@drawable/eve"
                android:textAllCaps="false"
                android:textAlignment="center"

               />
        </LinearLayout>
    <TextView
        android:id="@+id/tv_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text"/>
</RelativeLayout>
